--- a/src/Components/User/user.css
+++ b/src/Components/User/user.css
@@ -8,7 +8,7 @@
     background-size: cover;
     width: 100vw;
    height: 100vh;
-   position: absolute;
+ position: absolute;
 
  
 }
@@ -19,7 +19,7 @@ header{
     background-color: black;
     position: fixed;
     top: 0;
-  
+  z-index: 10000;
 }
 nav{
     width: 75%;
@@ -40,8 +40,7 @@ ul li:hover{
     align-items: center;
 }
 .user-banner-text{
-  position: relative;
-    margin-top: 100px;
+margin-top: 100px;
     color: #fff;
     margin-left: 100px;
 }
